--- a/JankenGame/Base.lproj/Main.storyboard
+++ b/JankenGame/Base.lproj/Main.storyboard
@@ -16,37 +16,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Oec-uV-e0F">
+                                <rect key="frame" x="96" y="541.66666666666663" width="201" height="76.333333333333371"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="START">
+                                    <fontDescription key="titleFontDescription" name="Helvetica" family="Helvetica" pointSize="54"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="didTapStartButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vZc-2s-NIx"/>
+                                </connections>
+                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0DN-SO-9is">
-                                <rect key="frame" x="73" y="135" width="247" height="39.666666666666657"/>
+                                <rect key="frame" x="37.333333333333343" y="223" width="318.66666666666663" height="44.333333333333314"/>
                                 <attributedString key="attributedText">
                                     <fragment content="じゃんけんアプリ">
                                         <attributes>
-                                            <font key="NSFont" metaFont="system" size="33"/>
-                                            <font key="NSOriginalFont" metaFont="system" size="17"/>
+                                            <font key="NSFont" size="40" name=".HiraKakuInterface-W4"/>
+                                            <font key="NSOriginalFont" metaFont="system" size="33"/>
                                             <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                         </attributes>
                                     </fragment>
                                 </attributedString>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Oec-uV-e0F">
-                                <rect key="frame" x="96" y="541.66666666666663" width="201" height="76.333333333333371"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain">
-                                    <attributedString key="attributedTitle">
-                                        <fragment content="START">
-                                            <attributes>
-                                                <color key="NSColor" name="textColor" catalog="System" colorSpace="catalog"/>
-                                                <font key="NSFont" size="54" name="Helvetica"/>
-                                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
-                                            </attributes>
-                                        </fragment>
-                                    </attributedString>
-                                </buttonConfiguration>
-                                <connections>
-                                    <action selector="didTapStartButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vZc-2s-NIx"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -55,7 +47,7 @@
                             <constraint firstItem="0DN-SO-9is" firstAttribute="centerX" secondItem="Oec-uV-e0F" secondAttribute="centerX" id="J1i-WJ-eQ0"/>
                             <constraint firstItem="0DN-SO-9is" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="XN1-Eo-BfS"/>
                             <constraint firstItem="Oec-uV-e0F" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="96" id="abr-Z4-n8V"/>
-                            <constraint firstItem="0DN-SO-9is" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="76" id="dQe-Hg-605"/>
+                            <constraint firstItem="0DN-SO-9is" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="164" id="dQe-Hg-605"/>
                         </constraints>
                     </view>
                     <connections>
